@@ -34,6 +34,8 @@ devscripts (2.18.5) UNRELEASED; urgency=medium
           (Recommended).
       - Avoid system() calls
       - Avoid code dup
+    + Behaviour changes
+      - Warn when find old pgp keyring
 
  -- Mattia Rizzolo <mattia@debian.org>  Mon, 03 Sep 2018 22:42:37 +0200
 
